--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,46 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+black==25.1.0
 Brotli==1.1.0
 click==8.2.1
 colorama==0.4.6
 et_xmlfile==2.0.0
 fastapi==0.116.1
+frozenlist==1.7.0
+greenlet==3.2.3
 h11==0.16.0
 idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
+multidict==6.6.3
+mypy_extensions==1.1.0
 numpy==2.3.1
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.1
+pathspec==0.12.1
+platformdirs==4.3.8
+propcache==0.3.2
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.42
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 uvicorn==0.35.0
+yarl==1.20.1
